<resources>
    <string name="app_name">EasyDO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">ToDo</string>
    <string name="menu_reflow">Done</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="save">Save</string>
    <string name="abbrechen">Cancel</string>
    <string name="beschreibung">Description</string>
    <string name="datum">Date</string>
    <string name="name">Task title</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radiobutton">RadioButton</string>
    <string name="radiobutton1">English</string>
    <string name="radiobutton2">German</string>
    <string name="radiobutton3">Hungarian</string>
    <string name="quit">Back</string>
    <string name="location">Location</string>
</resources>