<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="35dp"

        android:orientation="vertical"
        android:background="@android:color/darker_gray">

        <RadioButton
            android:id="@+id/radioButton_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton1"
            android:textSize="24dp" />

        <RadioButton
            android:id="@+id/radioButton_de"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2"
            android:textSize="24dp" />
        <RadioButton
            android:id="@+id/radioButton_hu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton3"
            android:textSize="24dp" />
    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="right|bottom"
        />
    </RadioGroup>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout    >