<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment" >

    <LinearLayout
        android:id="@+id/add_task2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/teal_700"
        android:orientation="vertical"
        android:translationZ="1dp"
        app:layout_constraintBaseline_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/set_task_name"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="task name"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_date"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/datum"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/set_task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusable="false"
                android:inputType="date"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView

            android:id="@+id/task_description"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/beschreibung"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save" />

            <TextView
                android:id="@+id/add_task_cancel"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/abbrechen"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>